force-app/main/default/objects/Driver__c/fields/DL_Year_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>DL_Year_of_Issue__c</fullName>
    <label>DL Year of Issue</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>