force-app/main/default/objects/Driver__c/fields/Driving_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Driving_License_Number__c</fullName>
    <label>Driving License Number</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>