force-app/main/default/objects/Driver__c/fields/E_Mail_Address__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_Address__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>E-Mail Address</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>