force-app/main/default/objects/Driver__c/fields/Supervised_by__c.field-meta.xml
<CustomField>
    <fullName>Supervised_by__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supervised by</label>
    <referenceTo>Supervisor__c</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>